Small Modifications on DB names

--- a/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
+++ b/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=WeatherApiService
 
+#spring.banner.location=banner.txt
 spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb
+#spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb_test?sessionVariable=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=root
 
