--- a/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
+++ b/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-spring.application.name=WeatherApiService
-
-#spring.banner.location=banner.txt
-spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb
-#spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb_test?sessionVariable=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.url=jdbc:mysql://localhost:3306/weather_test_db
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -10,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
