--- a/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
+++ b/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/weather_test_db
+spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb
 spring.datasource.username=root
 spring.datasource.password=root
 
