--- a/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
+++ b/WeatherApiProject/WeatherApiService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb
+spring.datasource.url=jdbc:mysql://localhost:3306/weather_test_db
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -6,5 +6,3 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
